# human-pose-tracking

./: .gitignore  README.md  bot-sort.config.yaml  dataclass.py  predict.py  pyproject.toml  track.py  util.py
config/: config.ini  config.ini.example
src/: calc.py  confidence.py  config.py  constant.py  convert.py  csv_writer.py  dataclass.py  draw.py  keypoint.py  position_cache.py  split.py  track.py  usecase.py  util.py
src/tests/: test_calc.py  test_usecase.py
