[project]
name = "human-pose-tracking"
version = "0.1.0"
description = "姿勢推定と人物追跡を行う"
authors = [
    { name = "ninebolt6", email = "67471674+ninebolt6@users.noreply.github.com" }
]
dependencies = [
    "ultralytics>=8.0.143",
    "tqdm~=4.65.0",
    "natsort~=8.4.0",
    "lapx>=0.5.4",
    "setuptools>=68.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest~=7.4.0",
]

[tool.rye.scripts]
track = "python src/track.py"
convert = "python src/convert.py"
confidence = "python src/confidence.py"
test = "pytest src/tests"

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"

[tool.hatch.metadata]
allow-direct-references = true
